<resources>
    <string name="app_name">Dialog</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">GUARDAR</string>
    <string name="ingresar">INGRESAR</string>
    <string name="relleno">relleno</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="relleno2">relleno</string>
    <string name="usuario2">Usuario</string>
</resources>