<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/etnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/contrase_a"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/guardar"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/guardar"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>